<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MySoundActivity">

    <RelativeLayout
        android:id="@+id/top_layout_bottom_activity_my_sound"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#272727"
        android:elevation="20dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:id="@+id/backBtnMySOund"
            android:layout_marginStart="20dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/action_bar_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:autoSizeTextType="uniform"
            android:breakStrategy="balanced"
            android:fontFamily="@font/droid_sans_bold"
            android:maxLines="1"
            android:text="@string/my_sound"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:id="@+id/searchBtnMySOund"
            android:visibility="gone"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_baseline_search_24" />

    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabLayoutMySound"
        android:layout_below="@+id/top_layout_bottom_activity_my_sound"
        android:background="#272727"
        android:elevation="0dp"
        app:tabIndicatorColor="@color/red_theme"
        app:tabRippleColor="#272727"
        app:tabSelectedTextColor="@color/red_theme"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_below="@id/tabLayoutMySound"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</RelativeLayout>