<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:id="@+id/backBtnSettings"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/action_bar_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/droid_sans_bold"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="@color/red" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/storage_layout_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/droid_sans_bold"
                android:text="@string/storage"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/droid_sans_regular"
                android:text="@string/to_listen_to_your_songs_we_use_the_chache_memory_to_increase_the_storage_volume_just_increase_the_it_according_to_your_need"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/droid_sans_regular"
                android:text="@string/note_each_device_has_a_storage_limit"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/droid_sans_regular"
                    android:text="@string/total_cache_memory_nused_space_niincrease_cache_space"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/usedSpaceTextviewSettings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/droid_sans_regular"
                        android:text="1GB\n0MB"
                        android:textColor="@color/gray"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/increaseSpaceEtSettings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-3dp"
                        android:layout_marginTop="-9dp"
                        android:fontFamily="@font/droid_sans_regular"
                        android:text="256MB"
                        android:textColor="@color/red_theme"
                        android:textSize="13sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/droid_sans_bold"
                android:gravity="center"
                android:text="@string/standard_value_256mb_maximum_value_1024mb"
                android:textColor="@color/red_theme"
                android:textSize="13sp" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/languageRadioButtonsGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/englishRadioButton"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/englishRadioButton"
                style="@style/settingsEqualizerRadioBtn"
                android:text="(STANDARD)\nENGLISH" />


            <View style="@style/lineGrey" />


            <RadioButton
                android:id="@+id/portegueseRadioButton"
                style="@style/settingsEqualizerRadioBtn"
                android:text="PORTUGUES" />


            <View style="@style/lineGrey" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/settingsOptionsButtonLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/storageBtnSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="30dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:rotation="270"
                    android:src="@drawable/minimize_player" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/droid_sans_regular"
                    android:text="@string/storage"
                    android:textColor="@color/white" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#3C3C3C" />


            <LinearLayout
                android:id="@+id/equalizerBtnSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="30dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:rotation="270"
                    android:src="@drawable/minimize_player" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/droid_sans_regular"
                    android:text="@string/sound_equalizer"
                    android:textColor="@color/white" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#3C3C3C" />


            <LinearLayout
                android:id="@+id/languageBtnSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="30dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:rotation="270"
                    android:src="@drawable/minimize_player" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/droid_sans_regular"
                    android:text="@string/language"
                    android:textColor="@color/white" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#3C3C3C" />


            <LinearLayout
                android:id="@+id/terms_and_conditions_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="30dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:rotation="270"
                    android:src="@drawable/minimize_player" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/droid_sans_regular"
                    android:text="@string/terms_and_conditions"
                    android:textColor="@color/white" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#3C3C3C" />

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/userDetailsTv"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@id/signOutBtn"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/droid_sans_regular"
        android:gravity="center"
        android:text="@string/sign_out"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/signOutBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/droid_sans_bold"
        android:gravity="center"
        android:text="@string/sign_out"
        android:textColor="@color/red_theme" />

</RelativeLayout>