<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".DownloadActivity">

    <RelativeLayout
        android:id="@+id/top_layout_bottom_activity"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:layout_width="45dp"
            android:id="@+id/backBtnDownload"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/action_bar_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/droid_sans_bold"
            android:text="@string/download"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:id="@+id/gotoCommandActivityBtn"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/download" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/red" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/droid_sans_regular"
            android:gravity="center"
            android:text="@string/insert_the_link"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="20dp"
            android:background="@drawable/downloadedittextbg">

            <EditText
                android:id="@+id/edittextdownload"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/ajgh"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:paddingStart="20dp"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/ajgh"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:rotation="180"
                android:src="@drawable/back" />


        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/droid_sans_regular"
            android:gravity="center"
            android:text="@string/ex_www_youtube_com"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </LinearLayout>

</RelativeLayout>