<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <RelativeLayout
        android:id="@+id/topLayoutDialogPlylist"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#272727"
        android:elevation="20dp">

        <ImageView
            android:id="@+id/cancel_button_dialog_add_playlist"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"
            android:src="@drawable/minimize_player" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:autoSizeTextType="uniform"
            android:breakStrategy="balanced"
            android:fontFamily="@font/droid_sans_bold"
            android:maxLines="1"
            android:text="@string/playlist_details"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/name_playlist_et"
        style="@style/customEditText"
        android:layout_below="@+id/topLayoutDialogPlylist"
        android:layout_margin="20dp"
        android:fontFamily="@font/droid_sans_regular"
        android:hint="@string/playlist_name"
        android:inputType="textPersonName" />

    <View
        android:id="@+id/kjkj"
        style="@style/lineGrey"
        android:layout_below="@+id/name_playlist_et" />

    <TextView
        android:id="@+id/popo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kjkj"
        android:layout_margin="20dp"
        android:fontFamily="@font/droid_sans_bold"
        android:text="@string/songs_included"
        android:textColor="@color/white" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/popo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/add_playlist_dialog_recyclerview"
                android:layout_width="match_parent"
                tools:itemCount="5"
                tools:listitem="@layout/layout_add_playlist_items"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:id="@+id/create_playlist_button_my_sound"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/red_theme"
        app:cardCornerRadius="55dp"
        app:cardElevation="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/ic_baseline_check_24" />

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>